condicionales, funciones y switch case en javascript con Zabdiel

--- a/indexJS.html
+++ b/indexJS.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <script src="/assets/script/variables.js"></script> -->
+    <!--<script src="/assets/script/funciones.js"></script> -->
+    <!-- <script src="/assets/script/condicional.js"></script> -->
 </head>
 <body>
-    <!-- <script src="/assets/script/variables.js"></script> -->
-    <script src="/assets/script/funciones.js"></script>
+
+    <script>
+        var fecha = new Date();
+
+        alert(fecha);
+    </script>
 </body>
 </html>
