--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
 <!--pies-->
 <h1>Introducción a JavaScript</h1>
 <!--dentro de una etiqueta script colocamos la deirccion de nuestro documento .js con el atributo src(source)-->
-<script src="/assets/script/script.js"></script>
+<!--<script src="/assets/script/script.js"></script>-->
+<h1>Arreglos y bucles </h1>
+<!--<script src="/assets/script/arreglosYBucles.js"></script>-->
+
 </body>
+
 
 
 </html>
